# f1-agent

./: .dockerignore  .dockerignore 2  .env.example  .gitignore  .gitignore copy 2  .pre-commit-config 2.yaml  ADVANCED_AI_SETUP.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  Dockerfile  Dockerfile 2  GITHUB_ACTIONS_QUICKSTART.md  MIGRATION_SUMMARY.md  Makefile  PRODUCTION_SETUP.md  PROJECT_RENAME_SUMMARY.md  QUICK_DEPLOY.md  README.md  RENDER_FIX_SUMMARY.md  SETUP.md  SHARE_WITH_RECRUITERS.md  START_HERE.md  docker-compose 2.yml  docker-compose.prod 2.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject 2.toml  pyproject.toml  pytest 2.ini  render 2.yaml  render.yaml  requirements.txt  setup 2.py  setup.py  vercel.json
.github/: DEPLOY_GUIDE 2.md
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml
apps/python-api/: .env  .env.example  API_SETUP.md  requirements.txt
apps/web/: next.config.ts  package.json  tailwind.config.ts  vercel.json
data/: dataset_metadata.json  drivers.json  gradient_boosting_model.pkl  historical_features.csv  logistic_model.pkl  model.json  races.json  random_forest_model.pkl  training_results.json
data/migration/: MIGRATION_STATUS.md  TASK_16_COMPLETION_SUMMARY.md
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  CORS_CONFIG_FIX.md  DEPLOYMENT 2.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEVELOPER_GUIDE.md  FREE_DEPLOYMENT_GUIDE.md  GITHUB_ACTIONS 2.md  GITHUB_ACTIONS.md  LANGCHAIN_V1_QUICK_REFERENCE 2.md  MODULE_IMPORT_FIX.md  OBSERVABILITY 2.md  OBSERVABILITY.md  README 2.md  README.md  RENDER_TROUBLESHOOTING.md  SECRETS_MANAGEMENT 2.md  SECRETS_MANAGEMENT.md  SECURITY.md  SETUP.md  TAVILY_INTEGRATION 2.md  TAVILY_INTEGRATION.md  TROUBLESHOOTING 2.md  TROUBLESHOOTING.md  index.html
monitoring/: alertmanager 2.yml  docker-compose.monitoring.yml  prometheus 2.yml
monitoring/alerts/: application_alerts.yml
scripts/: advanced_data_collector.py  advanced_ml_models.py  build_dataset.py  check_db.ts  check_driver_schema.ts  create_f1_schema.sql  deploy_production 2.sh  deploy_to_render.sh  health_check.sh  load_model_coeffs.ts  make_advanced_prediction.py  real_time_pipeline.py  rename_project.sh  rollback.sh  run_eval.ts  run_migrations 2.sh  run_validation 2.sh  seed_2025_features.ts  seed_f1_dynamic_data.ts  seed_features_current.ts  seed_neon.ts  setup_dev_env.sh  setup_github_actions.sh  setup_monitoring.sh  setup_production_env.sh  setup_production_pinecone.py  train_baseline.py  validate_config 2.py  validate_config.py  validate_setup 2.py  validate_setup.py  verify-build.sh
src/: __init__.py  exceptions.py
src/agent/: __init__.py  graph 2.py  graph.py  memory.py  nodes 2.py  nodes.py  state 2.py  state.py
src/api/: README 2.md  README.md  main 2.py  main.py
src/config/: __init__.py  logging 2.py  logging.py  settings 2.py  settings.py
src/ingestion/: README 2.md  README.md  __init__.py  cli 2.py  cli.py  data_loader.py  document_processor.py  metadata_enricher.py  pipeline.py
src/prompts/: README 2.md  README.md  __init__ 2.py  __init__.py  rag_prompts.py  specialized_prompts.py  system_prompts 2.py  system_prompts.py
src/search/: __init__.py  (+2 more)
tests/: README 2.md  README.md  README_VALIDATION.md  VALIDATION_SUMMARY.md  __init__.py  conftest.py  test_config 2.py  test_config.py  test_data_loader 2.py  test_data_loader.py  test_document_processor.py  test_e2e_user_workflows.py  test_exceptions.py  test_fallback.py  test_functionality_preservation.py  test_integration_agent.py  test_integration_api 2.py  test_integration_api.py  test_integration_complete.py  test_integration_tavily.py  test_integration_vector_store.py  test_performance_benchmarks 2.py  test_performance_benchmarks.py  test_prompts.py  test_requirements_validation.py  test_security 2.py  test_security.py  test_tavily_client.py  test_tavily_config.py  test_ui_components.py  test_user_acceptance.py  test_utils 2.py  test_utils.py
(+162 files in other folders)
